# watanabe

./: README.md
buzzpoint_analysis/: buzz_logistic.py  db_q.py  distro_anal.py  environment.yml  fit_params.py  fittr.py  fittr_summary.csv  nats_simulation.py  nats_simulation_spec.md  quizbowl_mle_spec.md  tournament_isolation_logic.ipynb  tourney_summary.py
buzzpoint_analysis/2025_nats_ex/: 2025-acf-nationals_bonuses.csv  2025-acf-nationals_buzzes.csv
buzzpoint_analysis/nats_sims_results/: combine_plots.py
carreau_sak/: new_thickening_deriv.py
dialogue-writer/dialogue-tool/: index.html  package-lock.json  package.json
dialogue-writer/dialogue-tool/src/: App.jsx
jforrit/: make_stats.py  stats.xlsx  statsbook.xlsx
ritdb/: ex_scoresheet.xlsx  fin_indiv_sum.xlsx  final.xlsx  final_indiv.xlsx  full_scores.xlsx  rd_1_rm_2.xlsx  rd_2_rm_2.xlsx  rd_3_rm_2.xlsx  rd_4_rm_2.xlsx  rd_5_rm_2.xlsx  rd_6_rm_2.xlsx  scorer.py  sorter.py  summarize_indiv.py  the_story.xlsx  total_scoresheet.xlsx
sds/: heck.txt  pyproject.toml  setup.sh
sds/src/sports_analyst/: __init__.py  cli.py  model.py  runner.py
sds/src/sports_analyst/api_docs/: 00_overview.md  01_mlb.md  02_nba_wnba.md  03_nfl.md  04_nhl.md  05_ncaa.md  06_soccer.md  07_cricket.md  08_rugby.md
sums_ex/: full_plotter.py  full_plotter_vpa.py  legendre_plotter.py  put_test.py  strip_plotter.py  strip_plotter_og.py  taylor_lib.py
wedge/: h_computer.md  thin_film_solver.py
